Update puppetv1.md